src: Format source and re-organize imports in Eclipse